# char_stat

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: base.rs  base_conf.rs  base_mult.rs  base_mult_conf.rs  bounds.rs  builder.rs  errors.rs  lib.rs  mod_mgr.rs  mod_mult.rs  modifier.rs  upgrade.rs
