[package]
name = "char_stat"
version = "0.1.3"
edition = "2021"
authors = ["Sarchimor"]
license = "MIT OR Apache-2.0"

[lib]
name = "char_stat"
path = "src/lib.rs"

#[[bin]]
#name = "cs_test_bin"
#path = "src/bin.rs"

# --Dependencies

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["serde", "builder"]
serde = ["dep:serde", "dep:serde_json"]
builder = []

# --Profiles

[profile.release]
lto = true	        # Enable link-time optimization, true / "fat" > "thin" > false > "off"
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"

[profile.release.package.'*']
codegen-units = 1

